[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/JumpPad.gd" type="Script" id=1]
[ext_resource path="res://GFX/Items/spring_out.png" type="Texture" id=2]
[ext_resource path="res://GFX/Items/spring_in.png" type="Texture" id=3]
[ext_resource path="res://GFX/Items/spring.png" type="Texture" id=4]
[ext_resource path="res://SFX/jump1.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Extended",
"speed": 1.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 74, 55 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 74, 28 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 60, 23.9691 )

[node name="JumpPad" type="StaticBody2D"]

input_pickable = true
collision_layer = 2
collision_mask = 2
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable" ]
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "Idle"

[node name="ExtendedCollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="IdleCollisionShape2D" type="CollisionShape2D" parent="." index="2"]

visible = false
position = Vector2( 0, 27 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="JumpArea2D" type="Area2D" parent="." index="3"]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpArea2D" index="0"]

visible = false
position = Vector2( 0, -12 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 5 )
volume_db = -20.0
pitch_scale = 0.7
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="JumpArea2D" to="." method="_on_JumpArea2D_body_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


